<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JediProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="Back">back</string>
    <string name="close" />
    <string name="open" />
    <string name="REGISTER">Register</string>
    <string name="textview">REGISTER</string>
    <string name="hint">Insert Your Name</string>
    <string name="error_register">Error</string>
    <string name="ok">Ok</string>
    <string name="error_register_message">Debes introducir un nombre</string>
    <string name="logout">Logout</string>
    <string name="logout_message">¿Está seguro que desea salir?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="estad_stiques_personals">Estadístiques Personales</string>
    <string name="win">Victoria</string>
    <string name="replay_game">¿Deseas volver a jugar?</string>
    <string name="no_est_loc">No hay estadísticas. \n Debes jugar mínimo un juego</string>
    <string name="no_est_glob">No se ha podido conectar con el servidor</string>
    <string name="no_has_afegit_encara_a_cap_amic">No has añadido ningún amigo aun</string>
    <string name="social">Social</string>
    <string name="afegir_amic">Añadir Amigo</string>
    <string name="esborrar_amic">Eliminar amigo</string>
    <string name="nom">Nombre:</string>
    <string name="register_friend">Register Friend</string>
    <string name="cognom">Apellido:</string>
    <string name="edat">Edad:</string>
    <string name="videojoc">Juego:</string>
    <string name="error_register_friend">No has rellenado todos los campos</string>
    <string name="error_delete_friend_text">No se encuentra el amigo</string>
    <string name="error_delete_friend_tittle">Error al eliminar</string>
    <string name="delete_friend_tittle">Delete Friend:</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="alert">Aviso</string>
    <string name="correct_delete_text">El amigo ha sido eliminado correctamente</string>
    <string name="friend">Dades personals</string>
    <string name="text_delete_friend">¿Está seguro que desea eliminar este amigo?</string>
    <string name="_10km">10KM</string>
    <string name="_1km">1KM</string>
    <string name="_100km">100Km</string>
    <string name="delete_circle">Delete circle</string>
    <string name="bienvenido_a_la_app_del_curso_de_android_jedi">Bienvenido a la App del Curso de Android Jedi</string>
    <string name="empezar_a_jugar">Empezar a jugar</string>

</resources>