<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFriendFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_friend"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textSize="30dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/nom_input"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/cognom"
                android:textSize="30dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/cognom_input"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/edat"
                android:textSize="30dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edat_input"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/videojoc"
                android:textSize="30dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/videojoc_input"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REGISTER"
            android:textSize="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="125dp"
            android:id="@+id/register_friend_button"/>
    </LinearLayout>
</FrameLayout>